--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/blur-samples-defocus.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/blur-samples-defocus.mdx
@@ -12,15 +12,30 @@ import {
 } from "./blur-corruption-images.js";
 
 export const DefocusSamples = (props) => {
-  const artifactUrls = props.getArtifacts(algo_cid);
-  const defocusUrls = artifactUrls.length > 0 
-    ? artifactUrls.filter(url => url.includes('Defocus_Blur'))
-    : defocus_blur_images;
+  // Create an array of URLs for the different severity levels (0-5)
+  const defocusUrls = [];
+  
+  // Try to get images from artifacts first
+  for (let i = 0; i <= 5; i++) {
+    const artifactURL = props.getArtifactURL(
+      algo_cid,
+      `temp/Defocus_Blur/severity${i}/9.png`,
+      null
+    );
+    
+    // If URL exists, add it to the array, otherwise use default images
+    if (artifactURL) {
+      defocusUrls.push(artifactURL);
+    }
+  }
+  
+  // If no artifacts were found, use the default images
+  const imagesToUse = defocusUrls.length === 6 ? defocusUrls : defocus_blur_images;
 
   return (
     <DisplayImages
       id={props.id}
-      images={defocusUrls}
+      images={imagesToUse}
       data={props.getResults(algo_cid).results}
       corruption_index={1}
       corruption_name="Blur: Defocus Blur"
