--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/blur-samples-hmotion.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/blur-samples-hmotion.mdx
@@ -12,15 +12,30 @@ import {
 } from "./blur-corruption-images.js";
 
 export const HMotionSamples = (props) => {
-  const artifactUrls = props.getArtifacts(algo_cid);
-  const hmotionUrls = artifactUrls.length > 0 
-    ? artifactUrls.filter(url => url.includes('Horizontal_Motion_Blur'))
-    : hmotion_blur_images;
+  // Create an array of URLs for the different severity levels (0-5)
+  const hmotionUrls = [];
+  
+  // Try to get images from artifacts first
+  for (let i = 0; i <= 5; i++) {
+    const artifactURL = props.getArtifactURL(
+      algo_cid,
+      `temp/Horizontal_Motion_Blur/severity${i}/9.png`,
+      null
+    );
+    
+    // If URL exists, add it to the array, otherwise use default images
+    if (artifactURL) {
+      hmotionUrls.push(artifactURL);
+    }
+  }
+  
+  // If no artifacts were found, use the default images
+  const imagesToUse = hmotionUrls.length === 6 ? hmotionUrls : hmotion_blur_images;
 
   return (
     <DisplayImages
       id={props.id}
-      images={hmotionUrls}
+      images={imagesToUse}
       data={props.getResults(algo_cid).results}
       corruption_index={3}
       corruption_name="Blur: Horizontal Motion Blur"
