--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/blur-samples-zoom.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/blur-samples-zoom.mdx
@@ -12,15 +12,30 @@ import {
 } from "./blur-corruption-images.js";
 
 export const ZoomSamples = (props) => {
-  const artifactUrls = props.getArtifacts(algo_cid);
-  const zoomUrls = artifactUrls.length > 0 
-    ? artifactUrls.filter(url => url.includes('Zoom_Blur'))
-    : zoom_blur_images;
+  // Create an array of URLs for the different severity levels (0-5)
+  const zoomUrls = [];
+  
+  // Try to get images from artifacts first
+  for (let i = 0; i <= 5; i++) {
+    const artifactURL = props.getArtifactURL(
+      algo_cid,
+      `temp/Zoom_Blur/severity${i}/9.png`,
+      null
+    );
+    
+    // If URL exists, add it to the array, otherwise use default images
+    if (artifactURL) {
+      zoomUrls.push(artifactURL);
+    }
+  }
+  
+  // If no artifacts were found, use the default images
+  const imagesToUse = zoomUrls.length === 6 ? zoomUrls : zoom_blur_images;
 
   return (
     <DisplayImages
       id={props.id}
-      images={zoomUrls}
+      images={imagesToUse}
       data={props.getResults(algo_cid).results}
       corruption_index={5}
       corruption_name="Blur: Zoom Blur"
