--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/digital-samples-brightdown.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/digital-samples-brightdown.mdx
@@ -13,15 +13,30 @@ import {
 } from "./digital-corruption-images.js";
 
 export const BrightnessDownSamples = (props) => {
-  const artifactUrls = props.getArtifacts(algo_cid);
-  const brightnessDownUrls = artifactUrls.length > 0 
-    ? artifactUrls.filter(url => url.includes('Brightness_Down'))
-    : brightness_down_images;
+  // Create an array of URLs for the different severity levels (0-5)
+  const brightnessDownUrls = [];
+  
+  // Try to get images from artifacts first
+  for (let i = 0; i <= 5; i++) {
+    const artifactURL = props.getArtifactURL(
+      algo_cid,
+      `temp/Brightness_Down/severity${i}/9.png`,
+      null
+    );
+    
+    // If URL exists, add it to the array, otherwise use default images
+    if (artifactURL) {
+      brightnessDownUrls.push(artifactURL);
+    }
+  }
+  
+  // If no artifacts were found, use the default images
+  const imagesToUse = brightnessDownUrls.length === 6 ? brightnessDownUrls : brightness_down_images;
 
   return (
     <DisplayImages
       id={props.id}
-      images={brightnessDownUrls}
+      images={imagesToUse}
       data={props.getResults(algo_cid).results}
       corruption_index={0}
       corruption_name="Digital: Brightness Down"
