--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/digital-samples-compression.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/digital-samples-compression.mdx
@@ -13,15 +13,30 @@ import {
 } from "./digital-corruption-images.js";
 
 export const CompressionSamples = (props) => {
-  const artifactUrls = props.getArtifacts(algo_cid);
-  const compressionUrls = artifactUrls.length > 0 
-    ? artifactUrls.filter(url => url.includes('Compression'))
-    : compression_images;
+  // Create an array of URLs for the different severity levels (0-5)
+  const compressionUrls = [];
+  
+  // Try to get images from artifacts first
+  for (let i = 0; i <= 5; i++) {
+    const artifactURL = props.getArtifactURL(
+      algo_cid,
+      `temp/Compression/severity${i}/9.png`,
+      null
+    );
+    
+    // If URL exists, add it to the array, otherwise use default images
+    if (artifactURL) {
+      compressionUrls.push(artifactURL);
+    }
+  }
+  
+  // If no artifacts were found, use the default images
+  const imagesToUse = compressionUrls.length === 6 ? compressionUrls : compression_images;
 
   return (
     <DisplayImages
       id={props.id}
-      images={compressionUrls}
+      images={imagesToUse}
       data={props.getResults(algo_cid).results}
       corruption_index={6}
       corruption_name="Digital: Compression"
