--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/digital-samples-contrastdown.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/digital-samples-contrastdown.mdx
@@ -13,15 +13,30 @@ import {
 } from "./digital-corruption-images.js";
 
 export const ContrastDownSamples = (props) => {
-  const artifactUrls = props.getArtifacts(algo_cid);
-  const contrastDownUrls = artifactUrls.length > 0 
-    ? artifactUrls.filter(url => url.includes('Contrast_Down'))
-    : contrast_down_images;
+  // Create an array of URLs for the different severity levels (0-5)
+  const contrastDownUrls = [];
+  
+  // Try to get images from artifacts first
+  for (let i = 0; i <= 5; i++) {
+    const artifactURL = props.getArtifactURL(
+      algo_cid,
+      `temp/Contrast_Down/severity${i}/9.png`,
+      null
+    );
+    
+    // If URL exists, add it to the array, otherwise use default images
+    if (artifactURL) {
+      contrastDownUrls.push(artifactURL);
+    }
+  }
+  
+  // If no artifacts were found, use the default images
+  const imagesToUse = contrastDownUrls.length === 6 ? contrastDownUrls : contrast_down_images;
 
   return (
     <DisplayImages
       id={props.id}
-      images={contrastDownUrls}
+      images={imagesToUse}
       data={props.getResults(algo_cid).results}
       corruption_index={2}
       corruption_name="Digital: Contrast Down"
