--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/digital-samples-saturate.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/digital-samples-saturate.mdx
@@ -13,15 +13,30 @@ import {
 } from "./digital-corruption-images.js";
 
 export const SaturateSamples = (props) => {
-  const artifactUrls = props.getArtifacts(algo_cid);
-  const saturateUrls = artifactUrls.length > 0 
-    ? artifactUrls.filter(url => url.includes('Saturate'))
-    : saturate_images;
+  // Create an array of URLs for the different severity levels (0-5)
+  const saturateUrls = [];
+  
+  // Try to get images from artifacts first
+  for (let i = 0; i <= 5; i++) {
+    const artifactURL = props.getArtifactURL(
+      algo_cid,
+      `temp/Saturate/severity${i}/9.png`,
+      null
+    );
+    
+    // If URL exists, add it to the array, otherwise use default images
+    if (artifactURL) {
+      saturateUrls.push(artifactURL);
+    }
+  }
+  
+  // If no artifacts were found, use the default images
+  const imagesToUse = saturateUrls.length === 6 ? saturateUrls : saturate_images;
 
   return (
     <DisplayImages
       id={props.id}
-      images={saturateUrls}
+      images={imagesToUse}
       data={props.getResults(algo_cid).results}
       corruption_index={4}
       corruption_name="Digital: Saturate"
