--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/environment-samples-fog.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/environment-samples-fog.mdx
@@ -9,15 +9,30 @@ import {
 } from "./environment-corruption-images.js";
 
 export const FogSamples = (props) => {
-  const artifactUrls = props.getArtifacts(algo_cid);
-  const fogUrls = artifactUrls.length > 0 
-    ? artifactUrls.filter(url => url.includes('Fog'))
-    : fog_images;
+  // Create an array of URLs for the different severity levels (0-5)
+  const fogUrls = [];
+  
+  // Try to get images from artifacts first
+  for (let i = 0; i <= 5; i++) {
+    const artifactURL = props.getArtifactURL(
+      algo_cid,
+      `temp/Fog/severity${i}/9.png`,
+      null
+    );
+    
+    // If URL exists, add it to the array, otherwise use default images
+    if (artifactURL) {
+      fogUrls.push(artifactURL);
+    }
+  }
+  
+  // If no artifacts were found, use the default images
+  const imagesToUse = fogUrls.length === 6 ? fogUrls : fog_images;
 
   return (
     <DisplayImages
       id={props.id}
-      images={fogUrls}
+      images={imagesToUse}
       data={props.getResults(algo_cid).results}
       corruption_index={0}
       corruption_name="Environment: Fog"
