--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/environment-samples-rain.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/environment-samples-rain.mdx
@@ -9,15 +9,30 @@ import {
 } from "./environment-corruption-images.js";
 
 export const RainSamples = (props) => {
-  const artifactUrls = props.getArtifacts(algo_cid);
-  const rainUrls = artifactUrls.length > 0 
-    ? artifactUrls.filter(url => url.includes('Rain'))
-    : rain_images;
+  // Create an array of URLs for the different severity levels (0-5)
+  const rainUrls = [];
+  
+  // Try to get images from artifacts first
+  for (let i = 0; i <= 5; i++) {
+    const artifactURL = props.getArtifactURL(
+      algo_cid,
+      `temp/Rain/severity${i}/9.png`,
+      null
+    );
+    
+    // If URL exists, add it to the array, otherwise use default images
+    if (artifactURL) {
+      rainUrls.push(artifactURL);
+    }
+  }
+  
+  // If no artifacts were found, use the default images
+  const imagesToUse = rainUrls.length === 6 ? rainUrls : rain_images;
 
   return (
     <DisplayImages
       id={props.id}
-      images={rainUrls}
+      images={imagesToUse}
       data={props.getResults(algo_cid).results}
       corruption_index={2}
       corruption_name="Environment: Rain"
