--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/environment-samples-snow.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/environment-samples-snow.mdx
@@ -9,15 +9,30 @@ import {
 } from "./environment-corruption-images.js";
 
 export const SnowSamples = (props) => {
-  const artifactUrls = props.getArtifacts(algo_cid);
-  const snowUrls = artifactUrls.length > 0 
-    ? artifactUrls.filter(url => url.includes('Snow'))
-    : snow_images;
+  // Create an array of URLs for the different severity levels (0-5)
+  const snowUrls = [];
+  
+  // Try to get images from artifacts first
+  for (let i = 0; i <= 5; i++) {
+    const artifactURL = props.getArtifactURL(
+      algo_cid,
+      `temp/Snow/severity${i}/9.png`,
+      null
+    );
+    
+    // If URL exists, add it to the array, otherwise use default images
+    if (artifactURL) {
+      snowUrls.push(artifactURL);
+    }
+  }
+  
+  // If no artifacts were found, use the default images
+  const imagesToUse = snowUrls.length === 6 ? snowUrls : snow_images;
 
   return (
     <DisplayImages
       id={props.id}
-      images={snowUrls}
+      images={imagesToUse}
       data={props.getResults(algo_cid).results}
       corruption_index={1}
       corruption_name="Environment: Snow"
