update widget text

--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/how-to-read-chart.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/how-to-read-chart.mdx
@@ -1,4 +1,4 @@
 <div style={{width:"100%"}}>
     <h4> <b> How to read? </b> </h4>
-    <p> The metric(s) shown below is based on the corruption algorithm(s) you have chosen to run. The line chart(s) show the changes in accuracy as the severity of the corruptions increase. There are also sample images generated for visualisation purposes. </p>
+    <p> The metric(s) shown below is based on the corruption algorithm(s) you have chosen to run. The bar chart(s) show the changes in accuracy as the severity of the corruptions increase. There are also sample images generated for visualisation purposes. </p>
 </div>
