--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/chart_selected_metrics.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/chart_selected_metrics.mdx
@@ -40,7 +40,7 @@ export const MetricsChart = ({ id, data, results, width, height }) => {
   )
 }
 
-
+{props.getResults(cid) ? (
 <MetricsChart
   id={props.id}
   data={props.getIBData(ib_cid)}
@@ -48,3 +48,26 @@ export const MetricsChart = ({ id, data, results, width, height }) => {
   width={props.width}
   height={props.height}
 />
+) : (
+  <div style={{ 
+    width: props.width, 
+    height: props.height, 
+    display: 'flex', 
+    justifyContent: 'center', 
+    alignItems: 'center',
+    flexDirection: 'column',
+    background: '#f8f9fa',
+    border: '1px dashed #dee2e6',
+    borderRadius: '4px',
+    padding: '20px',
+    textAlign: 'center' 
+  }}>
+    <div style={{ fontSize: '18px', fontWeight: 'bold', color: '#dc3545', marginBottom: '10px' }}>
+      Report is incomplete
+    </div>
+    <div style={{ color: '#6c757d' }}>
+      No Test Result is selected for Fairness Metrics Toolbox for Classification algorithm. 
+      Please select appropriate test results in the Data Selection page.
+    </div>
+  </div>
+)}
