--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/summary_description.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/summary_description.mdx
@@ -8,10 +8,28 @@ export const cid = "fairness_metrics_toolbox_for_classification"
       The displayed metric(s) are derived from the fairness decision tree's selection. Each bar corresponds to a unique combination of subgroups within the selected sensitive feature(s). The graph's length indicates the magnitude of accuracy/error made by your model while predicting the outcomes. 
     </div>
   </>
-):(
-<>
-  No data  
-</>
+) : (
+  <div style={{ 
+    width: props.width, 
+    height: props.height, 
+    display: 'flex', 
+    justifyContent: 'center', 
+    alignItems: 'center',
+    flexDirection: 'column',
+    background: '#f8f9fa',
+    border: '1px dashed #dee2e6',
+    borderRadius: '4px',
+    padding: '20px',
+    textAlign: 'center' 
+  }}>
+    <div style={{ fontSize: '18px', fontWeight: 'bold', color: '#dc3545', marginBottom: '10px' }}>
+      Report is incomplete
+    </div>
+    <div style={{ color: '#6c757d' }}>
+      No Test Result is selected for Fairness Metrics Toolbox for Classification algorithm. 
+      Please select appropriate test results in the Data Selection page.
+    </div>
+  </div>
 )}
 
 
