--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/technical_metrics.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/technical_metrics.mdx
@@ -65,10 +65,36 @@ export const GetAllMetrics = ({ id, results, width, height }) => {
   </ul>
   <br />
 
+  {props.getResults(cid) ? (
   <GetAllMetrics
     id={props.id}
     results={props.getResults(cid)}
     width={props.width}
     height={props.height}
   />
+  ) : (
+  <div style={{ 
+    width: props.width, 
+    height: 'auto', 
+    minHeight: '200px',
+    maxHeight: 1076, /* fixed pixel height */
+    display: 'flex', 
+    justifyContent: 'center', 
+    alignItems: 'center',
+    flexDirection: 'column',
+    background: '#f8f9fa',
+    border: '1px dashed #dee2e6',
+    borderRadius: '4px',
+    padding: '20px',
+    textAlign: 'center' 
+  }}>
+    <div style={{ fontSize: '18px', fontWeight: 'bold', color: '#dc3545', marginBottom: '10px' }}>
+      Report is incomplete
+    </div>
+    <div style={{ color: '#6c757d' }}>
+      No Test Result is selected for Fairness Metrics Toolbox for Classification algorithm. 
+      Please select appropriate test results in the Data Selection page.
+    </div>
+  </div>
+)}
 </div>
