added error handling in widgets for no test results

--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/widgets/introduction.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/widgets/introduction.mdx
@@ -10,8 +10,27 @@ export const algo_cid = "fairness_metrics_toolbox_for_regression"
     </p>
   </div>
     </>
-):(
-<>
-  No data  
-</>
+) : (
+  <div style={{ 
+    width: props.width, 
+          height: props.height, 
+    maxHeight: 1076,
+    display: 'flex', 
+    justifyContent: 'center', 
+    alignItems: 'center',
+    flexDirection: 'column',
+    background: '#f8f9fa',
+    border: '1px dashed #dee2e6',
+    borderRadius: '4px',
+    padding: '20px',
+    textAlign: 'center' 
+  }}>
+    <div style={{ fontSize: '18px', fontWeight: 'bold', color: '#dc3545', marginBottom: '10px' }}>
+      Report is incomplete
+    </div>
+    <div style={{ color: '#6c757d' }}>
+      No Test Result is selected for Fairness Metrics Toolbox for Regression algorithm. 
+      Please select appropriate test results in the Data Selection page.
+    </div>
+  </div>
 )}
