--- a/stock-plugins/aiverify.stock.partial-dependence-plot/widgets/pdp_graph.mdx
+++ b/stock-plugins/aiverify.stock.partial-dependence-plot/widgets/pdp_graph.mdx
@@ -6,15 +6,35 @@ export const cid = "aiverify_partial_dependence_plot"
 
 
 {props.getResults(cid)?(
-  <>
-    <div style={{ width: props.width, height: props.height }}>
+    <div style={{ width: props.width, height: 'auto' }}>
       <MultipleLineChart
         id={props.id}
         results={props.getResults(cid).results}
         feature_names={props.getResults(cid).feature_names}
-        height={props.height}/>
+        height={props.height}
+        width={props.width}/>
     </div>
-  </>
 ):(
-  <div>No data</div>
+  <div style={{ 
+    width: props.width, 
+    height: props.height, 
+    maxHeight: 1076,
+    display: 'flex', 
+    justifyContent: 'center', 
+    alignItems: 'center',
+    flexDirection: 'column',
+    background: '#f8f9fa',
+    border: '1px dashed #dee2e6',
+    borderRadius: '4px',
+    padding: '20px',
+    textAlign: 'center' 
+  }}>
+    <div style={{ fontSize: '18px', fontWeight: 'bold', color: '#dc3545', marginBottom: '10px' }}>
+      Report is incomplete
+    </div>
+    <div style={{ color: '#6c757d' }}>
+      No Test Result is selected for Partial Dependence Plot algorithm. 
+      Please select appropriate test results in the Data Selection page.
+    </div>
+  </div>
 )}
