--- a/stock-plugins/aiverify.stock.process-checklist/inputs/accountability_process_checklist.summary.mdx
+++ b/stock-plugins/aiverify.stock.process-checklist/inputs/accountability_process_checklist.summary.mdx
@@ -1,4 +1,4 @@
-import { getTotal, getCompleted } from './processChecklistSummary' 
+import { getTotal, getCompleted } from './processChecklistSummary';
 import { config } from './config_accountability';
 
 {/* Return summary of data */}
