--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/widgets/r2_parity.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/widgets/r2_parity.mdx
@@ -2,6 +2,7 @@ export const cid = "fairness_metrics_toolbox_for_regression"
 
 import { MetricBarChart } from "./metricbarchart.mdx";
 
+{props.getResults(cid) ? (
 <MetricBarChart
   metric="r2"
   metric_name="R2 Score Parity"
@@ -9,3 +10,26 @@ import { MetricBarChart } from "./metricbarchart.mdx";
   width={props.width}
   height={props.height}
 />
+) : (
+  <div style={{ 
+    width: props.width, 
+    height: props.height, 
+    display: 'flex', 
+    justifyContent: 'center', 
+    alignItems: 'center',
+    flexDirection: 'column',
+    background: '#f8f9fa',
+    border: '1px dashed #dee2e6',
+    borderRadius: '4px',
+    padding: '20px',
+    textAlign: 'center' 
+  }}>
+    <div style={{ fontSize: '18px', fontWeight: 'bold', color: '#dc3545', marginBottom: '10px' }}>
+      Report is incomplete
+    </div>
+    <div style={{ color: '#6c757d' }}>
+      No Test Result is selected for Fairness Metrics Toolbox for Regression algorithm. 
+      Please select appropriate test results in the Data Selection page.
+    </div>
+  </div>
+)}
