fixed container.width in plugin to props.width

--- a/stock-plugins/aiverify.stock.process-checklist/widgets/overall_summary.mdx
+++ b/stock-plugins/aiverify.stock.process-checklist/widgets/overall_summary.mdx
@@ -58,6 +58,6 @@ export const MySummary = ({ getIBData }) => {
   )
 }
 
-<div style={{ width:props.container.width, fontSize:'15px' }}>
+<div style={{ width:props.width, fontSize:'15px' }}>
   <MySummary getIBData={props.getIBData} />
 </div>
