--- a/stock-plugins/aiverify.stock.veritas/inputs/transparency_process_checklist.summary.mdx
+++ b/stock-plugins/aiverify.stock.veritas/inputs/transparency_process_checklist.summary.mdx
@@ -17,5 +17,6 @@ export const progress = (data) => {
 
 {/* Validate data. */}
 export const validate = (data) => {
-  return progress(data) == 100;
+  // return progress(data) == 100;
+  return true;
 }
