--- a/stock-plugins/aiverify.stock.process-checklist/inputs/export_process_checklists.summary.mdx
+++ b/stock-plugins/aiverify.stock.process-checklist/inputs/export_process_checklists.summary.mdx
@@ -1,83 +1,60 @@
-import { exportToExcel } from "./exportUtil.js";
+import { prepareChecklistExportData } from "./exportUtil.js";
+
+export const getConfigFiles = () => {
+  const configKeys = [
+    'accountability',
+    'data_governance',
+    'explainability',
+    'fairness',
+    'human_agency_oversight',
+    'inclusive_growth_soc_env',
+    'organisational_considerations',
+    'reproducibility',
+    'robustness',
+    'safety',
+    'security',
+    'transparency'
+  ]
+
+const configFiles = {};
+configKeys.forEach(key => {
+try {
+
+        configFiles[`config_${key}`] = require(`./config\_${key}.ts`).config;
+    } catch (err) {
+      console.error(`Failed to load config file for ${key}:`, err);
+
+}
+});
+
+return configFiles;
+};
+
+export async function prepareExportData(groupName, checklists) {
+  try {
+    // Get the config files
+    const configFiles = getConfigFiles();
+    
+    // Use the function to prepare the Excel workbook definition
+    const workbookDefinition = await prepareChecklistExportData(groupName, checklists, configFiles);
+    
+    return workbookDefinition;
+  } catch (error) {
+    console.error("Error preparing export data:", error);
+    return null;
+  }
+}
 
 export const ExportProcessChecklists = (props) => {
-  const { groupName, checklists, isExporting, setIsExporting } = props;
-
-// Create configFiles object by directly accessing config files from the same directory
-// We use a function to create this at runtime to avoid static import issues with MDX
-const getConfigFiles = () => {
-// Define all the config file keys we need to load
-const configKeys = [
-'accountability',
-'data_governance',
-'explainability',
-'fairness',
-'human_agency_oversight',
-'inclusive_growth',
-'organisational_considerations',
-'reproducibility',
-'robustness',
-'safety',
-'security',
-'transparency'
-];
-
-    // Load each config file and add it to the configFiles object
-    const configFiles = {};
-    configKeys.forEach(key => {
-      try {
-        // Use a direct reference since we're in the same directory
-        // This approach is more compatible with MDX than static imports
-        configFiles[`config_${key}`] = require(`./config_${key}.ts`).config;
-      } catch (err) {
-        console.error(`Failed to load config_${key}.ts:`, err);
-      }
-    });
-
-    return configFiles;
-
-};
-
-const handleExport = async () => {
-if (isExporting) return;
-
-    setIsExporting(true);
-    try {
-      // Get the config files when the export is triggered
-      const configFiles = getConfigFiles();
-      await exportToExcel(groupName, checklists, configFiles);
-    } catch (error) {
-      console.error("Error exporting to Excel:", error);
-    } finally {
-      setIsExporting(false);
-    }
-
-};
+  const { groupName, checklists } = props;
 
 return (
 
-<button
-  onClick={handleExport}
-  disabled={isExporting}
-  style={{
-    cursor: isExporting ? "default" : "pointer",
-    opacity: isExporting ? 0.7 : 1,
-    background: "transparent",
-    border: "none",
-    color: "#FFFFFF",
-    display: "flex",
-    alignItems: "center",
-    justifyContent: "center",
-  }}
->
-  <svg
-    width="24"
-    height="24"
-    viewBox="0 0 24 24"
-    fill="none"
-    xmlns="http://www.w3.org/2000/svg"
-  >
-    <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" fill="currentColor" />
-  </svg>
-</button>
+<div style={{ padding: "8px", color: "#666", fontSize: "14px" }}>
+  Export component is ready. This renderer is for preview only.
+  <br />
+  Group: {groupName}
+  <br />
+  Checklists: {checklists?.length || 0} items
+</div>
 ); };
