modify footer positioning

--- a/stock-plugins/aiverify.stock.veritas/widgets/cover_page_main.mdx
+++ b/stock-plugins/aiverify.stock.veritas/widgets/cover_page_main.mdx
@@ -71,10 +71,9 @@ export const MyCoverPage = ({ props }) => {
       {/* Powered by AI Verify - Added at the bottom right */}
       <div style={{
         position: 'absolute',
-        top: '80%',
-        left: '80%',
+        bottom: '15%',
+        right: '15%',
         fontSize: '16px',
-        fontWeight: '500',
         color: 'white'
       }}>
         Powered by AI Verify
