--- a/stock-plugins/aiverify.stock.process-checklist/inputs/export_process_checklists.summary.mdx
+++ b/stock-plugins/aiverify.stock.process-checklist/inputs/export_process_checklists.summary.mdx
@@ -1,4 +1,5 @@
 import { prepareChecklistExportData } from "./exportUtil.js";
+import { importJson, jsonToChecklistSubmissions, extractChecklistData } from "./importUtils.js";
 
 export const getConfigFiles = () => {
   const configKeys = [
@@ -14,16 +15,14 @@ export const getConfigFiles = () => {
     'safety',
     'security',
     'transparency'
-  ]
+  ];
 
 const configFiles = {};
 configKeys.forEach(key => {
 try {
-
-        configFiles[`config_${key}`] = require(`./config\_${key}.ts`).config;
-    } catch (err) {
-      console.error(`Failed to load config file for ${key}:`, err);
-
+configFiles[`config_${key}`] = require(`./config_${key}.ts`).config;
+} catch (err) {
+console.error(`Failed to load config file for ${key}:`, err);
 }
 });
 
@@ -34,27 +33,34 @@ export async function prepareExportData(groupName, checklists) {
   try {
     // Get the config files
     const configFiles = getConfigFiles();
-    
+
     // Use the function to prepare the Excel workbook definition
-    const workbookDefinition = await prepareChecklistExportData(groupName, checklists, configFiles);
-    
+    const workbookDefinition = await prepareChecklistExportData(
+      groupName,
+      checklists,
+      configFiles
+    );
+
     return workbookDefinition;
-  } catch (error) {
-    console.error("Error preparing export data:", error);
-    return null;
-  }
+
+} catch (error) {
+console.error("Error preparing export data:", error);
+return null;
+}
 }
 
-export const ExportProcessChecklists = (props) => {
+export const mdxImportJson = importJson;
+export const mdxJsonToChecklistSubmissions = jsonToChecklistSubmissions;
+export const mdxExtractChecklistData = extractChecklistData;
+
+export function ExportProcessChecklists(props) {
   const { groupName, checklists } = props;
 
 return (
 
 <div style={{ padding: "8px", color: "#666", fontSize: "14px" }}>
-  Export component is ready. This renderer is for preview only.
-  <br />
-  Group: {groupName}
-  <br />
-  Checklists: {checklists?.length || 0} items
+  <div>Export component is ready. This renderer is for preview only.</div>
+  <div>Group: {groupName}</div>
+  <div>Checklists: {checklists?.length || 0} items</div>
 </div>
-); };
+); }
