export json functionality

--- a/stock-plugins/aiverify.stock.process-checklist/inputs/export_process_checklists.mdx
+++ b/stock-plugins/aiverify.stock.process-checklist/inputs/export_process_checklists.mdx
@@ -1,8 +1,7 @@
 import { ExportProcessChecklists } from "./export_process_checklists.summary.mdx";
 
+{/* This component is for preview display only */}
 <ExportProcessChecklists
   groupName={props.groupName}
   checklists={props.checklists}
-  isExporting={props.isExporting}
-  setIsExporting={props.setIsExporting}
 />{" "}
