--- a/stock-plugins/aiverify.stock.process-checklist/inputs/export_process_checklists.summary.mdx
+++ b/stock-plugins/aiverify.stock.process-checklist/inputs/export_process_checklists.summary.mdx
@@ -2,6 +2,8 @@ import { prepareChecklistExportData } from "./exportUtil.js";
 import { importJson, jsonToChecklistSubmissions, extractChecklistData } from "./importUtils.js";
 
 export const getConfigFiles = () => {
+  console.log("Starting getConfigFiles...");
+  
   const configKeys = [
     'accountability',
     'data_governance',
@@ -17,114 +19,199 @@ export const getConfigFiles = () => {
     'transparency'
   ];
 
-const configFiles = {};
-configKeys.forEach(key => {
-try {
-configFiles[`config_${key}`] = require(`./config_${key}.ts`).config;
-} catch (err) {
-console.error(`Failed to load config file for ${key}:`, err);
-}
-});
+  console.log(`Will try to load ${configKeys.length} config files: ${configKeys.join(', ')}`);
 
-return configFiles;
+  const configFiles = {};
+  let loadedCount = 0;
+  
+  configKeys.forEach(key => {
+    try {
+      // Try different ways to require the config file
+      let config = null;
+      
+      // Method 1: Try direct require
+      try {
+        console.log(`Attempting to load config for ${key} using direct require...`);
+        config = require(`./config_${key}.ts`).config;
+        console.log(`Successfully loaded config for ${key} using direct require`);
+      } catch (err1) {
+        console.log(`Failed to load with direct require: ${err1.message}`);
+        
+        // Method 2: Try with full path
+        try {
+          const fullPath = `./inputs/config_${key}.ts`;
+          console.log(`Attempting to load config for ${key} using full path: ${fullPath}`);
+          config = require(fullPath).config;
+          console.log(`Successfully loaded config for ${key} using full path`);
+        } catch (err2) {
+          console.log(`Failed to load with full path: ${err2.message}`);
+          
+          // Method 3: Create a dummy config as fallback if all else fails
+          console.log(`Creating dummy config for ${key} as fallback`);
+          config = {
+            principle: key.charAt(0).toUpperCase() + key.slice(1).replace(/_/g, ' '),
+            description: `${key.charAt(0).toUpperCase() + key.slice(1).replace(/_/g, ' ')} checklist`,
+            sections: []
+          };
+        }
+      }
+      
+      if (config) {
+        configFiles[`config_${key}`] = config;
+        loadedCount++;
+        console.log(`Successfully stored config for key: config_${key}`);
+      }
+    } catch (err) {
+      console.error(`Failed to load or process config file for ${key}:`, err);
+    }
+  });
+
+  console.log(`Loaded ${loadedCount}/${configKeys.length} config files`);
+  return configFiles;
 };
 
 export function exportAsJson(checklists) {
-  // Get all config files
-  const configFiles = getConfigFiles();
-
-// Initialize the result object
-const result = {
-exportDate: new Date().toISOString(),
-checklists: []
-};
-
-// Process each checklist
-for (const checklist of checklists) {
-// Extract the principle name from the cid (e.g., 'transparency' from 'transparency*process_checklist')
-const principle = checklist.cid.replace('\_process_checklist', '');
-const configKey = `config*${principle}`;
-
-    // Get the corresponding config
-    const config = configFiles[configKey];
-
-    if (!config) {
-      console.warn(`Config not found for principle: ${principle}`);
-      continue; // Skip this checklist
+  try {
+    // Get all config files
+    console.log("Fetching config files for JSON export");
+    const configFiles = getConfigFiles();
+    
+    // Check if we got any config files
+    const configKeys = Object.keys(configFiles);
+    console.log(`Loaded ${configKeys.length} config files: ${configKeys.join(', ')}`);
+    
+    if (configKeys.length === 0) {
+      console.error("No config files were loaded. JSON export may be incomplete.");
     }
 
-    // Create a structured object for this checklist
-    const checklistData = {
-      id: checklist.id,
-      gid: checklist.gid,
-      cid: checklist.cid,
-      name: checklist.name,
-      group: checklist.group,
-      principle: config.principle,
-      description: config.description,
-      sections: []
+    // Initialize the result object
+    const result = {
+      exportDate: new Date().toISOString(),
+      checklists: []
     };
 
-    // Process each section in the config
-    for (const section of config.sections) {
-      const sectionData = {
-        section: section.section,
-        testType: section.testType,
-        criteria: []
-      };
+    // Process each checklist
+    console.log(`Processing ${checklists.length} checklists for JSON export`);
+    for (const checklist of checklists) {
+      try {
+        // Extract principle name from cid (e.g., 'transparency' from 'transparency_process_checklist')
+        const principle = checklist.cid.replace('_process_checklist', '');
+        const configKey = `config_${principle}`;
+        
+        console.log(`Looking for config with key: ${configKey} for principle: ${principle}`);
 
-      // Process each testable criteria in the section
-      for (const criteriaItem of section.checklist) {
-        const criteriaData = {
-          testableCriteria: criteriaItem.testableCriteria,
-          processes: []
+        // Get the corresponding config
+        const config = configFiles[configKey];
+
+        if (!config) {
+          console.warn(`Config not found for principle: ${principle}. Using fallback approach.`);
+          
+          // Fallback: Create a basic structure even without the config
+          const checklistData = {
+            id: checklist.id || "",
+            gid: checklist.gid,
+            cid: checklist.cid,
+            name: checklist.name,
+            group: checklist.group,
+            principle: principle,
+            description: `Checklist for ${principle}`,
+            sections: []
+          };
+          
+          // Add a basic data section with just the raw data
+          checklistData.data = checklist.data;
+          
+          // Add the checklist to the result
+          result.checklists.push(checklistData);
+          continue;
+        }
+
+        // Create a structured object for this checklist
+        const checklistData = {
+          id: checklist.id || "",
+          gid: checklist.gid,
+          cid: checklist.cid,
+          name: checklist.name,
+          group: checklist.group,
+          principle: config.principle,
+          description: config.description,
+          sections: []
         };
 
-        // Process each process in the criteria
-        for (const process of criteriaItem.processes) {
-          const pid = process.pid;
+        // Process each section in the config
+        for (const section of config.sections) {
+          const sectionData = {
+            section: section.section,
+            testType: section.testType,
+            criteria: []
+          };
 
-          // Get the completed and elaboration data from the checklist
-          const completed = checklist.data[`completed-${pid}`] || '';
-          const elaboration = checklist.data[`elaboration-${pid}`] || '';
+          // Process each testable criteria in the section
+          for (const criteriaItem of section.checklist) {
+            const criteriaData = {
+              testableCriteria: criteriaItem.testableCriteria,
+              processes: []
+            };
 
-          // Add the process data
-          criteriaData.processes.push({
-            pid: pid,
-            process: process.process,
-            metric: process.metric,
-            processChecks: process.processChecks,
-            completed: completed,
-            elaboration: elaboration
-          });
+            // Process each process in the criteria
+            for (const process of criteriaItem.processes) {
+              const pid = process.pid;
+
+              // Get the completed and elaboration data from the checklist
+              const completed = checklist.data[`completed-${pid}`] || '';
+              const elaboration = checklist.data[`elaboration-${pid}`] || '';
+
+              // Add the process data
+              criteriaData.processes.push({
+                pid: pid,
+                process: process.process,
+                metric: process.metric,
+                processChecks: process.processChecks,
+                completed: completed,
+                elaboration: elaboration
+              });
+            }
+
+            sectionData.criteria.push(criteriaData);
+          }
+
+          checklistData.sections.push(sectionData);
         }
 
-        sectionData.criteria.push(criteriaData);
-      }
+        // Count completed processes
+        let yesCount = 0;
+        let totalProcesses = 0;
 
-      checklistData.sections.push(sectionData);
-    }
-
-    // Count completed processes
-    let yesCount = 0;
-    let totalProcesses = 0;
-
-    for (const section of checklistData.sections) {
-      for (const criteria of section.criteria) {
-        for (const process of criteria.processes) {
-          totalProcesses++;
-          if (process.completed === 'Yes') {
-            yesCount++;
+        for (const section of checklistData.sections) {
+          for (const criteria of section.criteria) {
+            for (const process of criteria.processes) {
+              totalProcesses++;
+              if (process.completed === 'Yes') {
+                yesCount++;
+              }
+            }
           }
         }
+        
+        // Add the processed checklist to the result
+        result.checklists.push(checklistData);
+      } catch (error) {
+        console.error(`Error processing checklist ${checklist.cid}:`, error);
+        // Continue with the next checklist even if this one failed
       }
     }
-    // Add the processed checklist to the result
-    result.checklists.push(checklistData);
 
-}
-
-return result;
+    console.log(`JSON export completed with ${result.checklists.length} checklists`);
+    return result;
+  } catch (error) {
+    console.error("Error in exportAsJson:", error);
+    // Return a minimal valid result
+    return {
+      exportDate: new Date().toISOString(),
+      checklists: [],
+      error: error.message
+    };
+  }
 }
 
 export async function prepareExportData(groupName, checklists) {
@@ -151,14 +238,53 @@ export const mdxImportJson = importJson;
 export const mdxJsonToChecklistSubmissions = jsonToChecklistSubmissions;
 export const mdxExtractChecklistData = extractChecklistData;
 
+export async function exportProcessChecklists(format, groupName, checklists) {
+  console.log(`Starting exportProcessChecklists with format: ${format}, groupName: ${groupName}`);
+  
+  if (!format || !checklists || !Array.isArray(checklists)) {
+    console.error('Invalid parameters for export');
+    return null;
+  }
+
+  // Convert format to lowercase for case-insensitive comparison
+  const formatLower = format.toLowerCase();
+
+  try {
+    if (formatLower === 'json') {
+      // For JSON format, call exportAsJson
+      console.log('Using JSON export format');
+      return exportAsJson(checklists);
+    } else if (formatLower === 'xlsx') {
+      // For Excel format, call prepareExportData
+      console.log('Using Excel export format');
+      return await prepareExportData(groupName, checklists);
+    } else {
+      console.error(`Unsupported export format: ${format}. Supported formats are 'json' and 'xlsx'.`);
+      return null;
+    }
+  } catch (error) {
+    console.error(`Error in exportProcessChecklists (format: ${format}):`, error);
+    
+    // Create a minimal response for error cases
+    if (formatLower === 'json') {
+      return {
+        exportDate: new Date().toISOString(),
+        checklists: [],
+        error: error.message
+      };
+    }
+    return null;
+  }
+}
+
 export function ExportProcessChecklists(props) {
   const { groupName, checklists } = props;
 
-return (
-
-<div style={{ padding: "8px", color: "#666", fontSize: "14px" }}>
-  <div>Export component is ready. This renderer is for preview only.</div>
-  <div>Group: {groupName}</div>
-  <div>Checklists: {checklists?.length || 0} items</div>
-</div>
-); }
+  return (
+    <div style={{ padding: "8px", color: "#666", fontSize: "14px" }}>
+      <div>Export component is ready. This renderer is for preview only.</div>
+      <div>Group: {groupName}</div>
+      <div>Checklists: {checklists?.length || 0} items</div>
+    </div>
+  );
+}
