fixed json summary justification

--- a/stock-plugins/aiverify.stock.process-checklist/inputs/export_process_checklists.summary.mdx
+++ b/stock-plugins/aiverify.stock.process-checklist/inputs/export_process_checklists.summary.mdx
@@ -19,16 +19,16 @@ export const getConfigFiles = () => {
     'transparency'
   ];
 
-  console.log(`Will try to load ${configKeys.length} config files: ${configKeys.join(', ')}`);
+console.log(`Will try to load ${configKeys.length} config files: ${configKeys.join(', ')}`);
 
-  const configFiles = {};
-  let loadedCount = 0;
-  
-  configKeys.forEach(key => {
-    try {
-      // Try different ways to require the config file
-      let config = null;
-      
+const configFiles = {};
+let loadedCount = 0;
+
+configKeys.forEach(key => {
+try {
+// Try different ways to require the config file
+let config = null;
+
       // Method 1: Try direct require
       try {
         console.log(`Attempting to load config for ${key} using direct require...`);
@@ -36,7 +36,7 @@ export const getConfigFiles = () => {
         console.log(`Successfully loaded config for ${key} using direct require`);
       } catch (err1) {
         console.log(`Failed to load with direct require: ${err1.message}`);
-        
+
         // Method 2: Try with full path
         try {
           const fullPath = `./inputs/config_${key}.ts`;
@@ -45,7 +45,7 @@ export const getConfigFiles = () => {
           console.log(`Successfully loaded config for ${key} using full path`);
         } catch (err2) {
           console.log(`Failed to load with full path: ${err2.message}`);
-          
+
           // Method 3: Create a dummy config as fallback if all else fails
           console.log(`Creating dummy config for ${key} as fallback`);
           config = {
@@ -55,7 +55,7 @@ export const getConfigFiles = () => {
           };
         }
       }
-      
+
       if (config) {
         configFiles[`config_${key}`] = config;
         loadedCount++;
@@ -64,10 +64,11 @@ export const getConfigFiles = () => {
     } catch (err) {
       console.error(`Failed to load or process config file for ${key}:`, err);
     }
-  });
 
-  console.log(`Loaded ${loadedCount}/${configKeys.length} config files`);
-  return configFiles;
+});
+
+console.log(`Loaded ${loadedCount}/${configKeys.length} config files`);
+return configFiles;
 };
 
 export function exportAsJson(checklists) {
@@ -90,14 +91,47 @@ export function exportAsJson(checklists) {
       checklists: []
     };
 
+    // Sort checklists based on groupNumber from their meta.json files
+    const sortedChecklists = [...checklists].sort((a, b) => {
+      try {
+        // Extract the base key (without _process_checklist suffix)
+        const keyA = a.cid.replace("_process_checklist", "");
+        const keyB = b.cid.replace("_process_checklist", "");
+
+        // Determine the meta file paths
+        let metaFileA, metaFileB;
+
+        try {
+          metaFileA = require(`./${keyA}_process_checklist.meta.json`);
+          metaFileB = require(`./${keyB}_process_checklist.meta.json`);
+
+          // Extract groupNumber from meta files or use default values
+          const groupNumberA = metaFileA.groupNumber || 999;
+          const groupNumberB = metaFileB.groupNumber || 999;
+
+          return groupNumberA - groupNumberB;
+        } catch (error) {
+          console.error("Error sorting checklists by groupNumber:", error);
+          return 0; // Keep original order if there's an error
+        }
+      } catch (error) {
+        console.error("Error in sorting comparison function:", error);
+        return 0;
+      }
+    });
+
     // Process each checklist
-    console.log(`Processing ${checklists.length} checklists for JSON export`);
-    for (const checklist of checklists) {
+    console.log(`Processing ${sortedChecklists.length} checklists for JSON export`);
+    for (const checklist of sortedChecklists) {
       try {
         // Extract principle name from cid (e.g., 'transparency' from 'transparency_process_checklist')
         const principle = checklist.cid.replace('_process_checklist', '');
-        const configKey = `config_${principle}`;
-        
+
+        // Special case for inclusive_growth - needs different config file name
+        const configKey = principle === 'inclusive_growth'
+          ? 'config_inclusive_growth_soc_env'
+          : `config_${principle}`;
+
         console.log(`Looking for config with key: ${configKey} for principle: ${principle}`);
 
         // Get the corresponding config
@@ -105,7 +139,7 @@ export function exportAsJson(checklists) {
 
         if (!config) {
           console.warn(`Config not found for principle: ${principle}. Using fallback approach.`);
-          
+
           // Fallback: Create a basic structure even without the config
           const checklistData = {
             id: checklist.id || "",
@@ -117,10 +151,14 @@ export function exportAsJson(checklists) {
             description: `Checklist for ${principle}`,
             sections: []
           };
-          
+
           // Add a basic data section with just the raw data
           checklistData.data = checklist.data;
-          
+
+          // Add summary justification if available
+          const summaryJustificationKey = `summary-justification-${principle}`;
+          checklistData.summaryJustification = checklist.data[summaryJustificationKey] || "";
+
           // Add the checklist to the result
           result.checklists.push(checklistData);
           continue;
@@ -192,7 +230,16 @@ export function exportAsJson(checklists) {
             }
           }
         }
-        
+
+        // Add summary justification if available
+        const summaryJustificationKey = `summary-justification-${config.principle}`;
+        if (checklist.data[summaryJustificationKey]) {
+          checklistData.summaryJustification = checklist.data[summaryJustificationKey];
+        } else {
+          checklistData.summaryJustification = "";
+          console.warn(`No summary justification found for principle: ${config.principle}`);
+        }
+
         // Add the processed checklist to the result
         result.checklists.push(checklistData);
       } catch (error) {
@@ -203,15 +250,16 @@ export function exportAsJson(checklists) {
 
     console.log(`JSON export completed with ${result.checklists.length} checklists`);
     return result;
-  } catch (error) {
-    console.error("Error in exportAsJson:", error);
-    // Return a minimal valid result
-    return {
-      exportDate: new Date().toISOString(),
-      checklists: [],
-      error: error.message
-    };
-  }
+
+} catch (error) {
+console.error("Error in exportAsJson:", error);
+// Return a minimal valid result
+return {
+exportDate: new Date().toISOString(),
+checklists: [],
+error: error.message
+};
+}
 }
 
 export async function prepareExportData(groupName, checklists) {
@@ -246,25 +294,25 @@ export async function exportProcessChecklists(format, groupName, checklists) {
     return null;
   }
 
-  // Convert format to lowercase for case-insensitive comparison
-  const formatLower = format.toLowerCase();
+// Convert format to lowercase for case-insensitive comparison
+const formatLower = format.toLowerCase();
 
-  try {
-    if (formatLower === 'json') {
-      // For JSON format, call exportAsJson
-      console.log('Using JSON export format');
-      return exportAsJson(checklists);
-    } else if (formatLower === 'xlsx') {
-      // For Excel format, call prepareExportData
-      console.log('Using Excel export format');
-      return await prepareExportData(groupName, checklists);
-    } else {
-      console.error(`Unsupported export format: ${format}. Supported formats are 'json' and 'xlsx'.`);
-      return null;
-    }
-  } catch (error) {
-    console.error(`Error in exportProcessChecklists (format: ${format}):`, error);
-    
+try {
+if (formatLower === 'json') {
+// For JSON format, call exportAsJson
+console.log('Using JSON export format');
+return exportAsJson(checklists);
+} else if (formatLower === 'xlsx') {
+// For Excel format, call prepareExportData
+console.log('Using Excel export format');
+return await prepareExportData(groupName, checklists);
+} else {
+console.error(`Unsupported export format: ${format}. Supported formats are 'json' and 'xlsx'.`);
+return null;
+}
+} catch (error) {
+console.error(`Error in exportProcessChecklists (format: ${format}):`, error);
+
     // Create a minimal response for error cases
     if (formatLower === 'json') {
       return {
@@ -274,17 +322,18 @@ export async function exportProcessChecklists(format, groupName, checklists) {
       };
     }
     return null;
-  }
+
+}
 }
 
 export function ExportProcessChecklists(props) {
   const { groupName, checklists } = props;
 
-  return (
-    <div style={{ padding: "8px", color: "#666", fontSize: "14px" }}>
-      <div>Export component is ready. This renderer is for preview only.</div>
-      <div>Group: {groupName}</div>
-      <div>Checklists: {checklists?.length || 0} items</div>
-    </div>
-  );
-}
+return (
+
+<div style={{ padding: "8px", color: "#666", fontSize: "14px" }}>
+  <div>Export component is ready. This renderer is for preview only.</div>
+  <div>Group: {groupName}</div>
+  <div>Checklists: {checklists?.length || 0} items</div>
+</div>
+); }
